k8s/cart-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  namespace: ecommerce-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
        resource.opentelemetry.io/service.name: "api-gateway"
        resource.opentelemetry.io/service.namespace: "ecommerce"
    spec:
      containers:
        - name: cart-service
          image: dheerajkadve/cart-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: ecommerce-devops
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: cart-service
