k8s/inventory-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: ecommerce-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: inventory-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: ecommerce-devops
spec:
  ports:
    - port: 8086
      targetPort: 8086
  selector:
    app: inventory-service
