k8s/notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: ecommerce-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
        resource.opentelemetry.io/service.name: "api-gateway"
        resource.opentelemetry.io/service.namespace: "ecommerce"
    spec:
      containers:
        - name: notification-service
          image: dheerajkadve/notification-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: ecommerce-devops
spec:
  ports:
    - port: 8087
      targetPort: 8087
  selector:
    app: notification-service
