k8s/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: ecommerce-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
        resource.opentelemetry.io/service.name: "api-gateway"
        resource.opentelemetry.io/service.namespace: "ecommerce"
    spec:
      containers:
        - name: order-service
          image: dheerajkadve/order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ecommerce-devops
spec:
  ports:
    - port: 8084
      targetPort: 8084
  selector:
    app: order-service
