k8s/payment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: ecommerce-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
        resource.opentelemetry.io/service.name: "api-gateway"
        resource.opentelemetry.io/service.namespace: "ecommerce"
    spec:
      containers:
        - name: payment-service
          image: dheerajkadve/payment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: ecommerce-devops
spec:
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    app: payment-service
