k8s/product-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: ecommerce-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
        resource.opentelemetry.io/service.name: "api-gateway"
        resource.opentelemetry.io/service.namespace: "ecommerce"
    spec:
      containers:
        - name: product-service
          image: dheerajkadve/product-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: ecommerce-devops
spec:
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: product-service
