k8s/user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: ecommerce-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
        resource.opentelemetry.io/service.name: "api-gateway"
        resource.opentelemetry.io/service.namespace: "ecommerce"
    spec:
      containers:
        - name: user-service
          image: dheerajkadve/user-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: ecommerce-devops
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: user-service
